# py-celery-sqlalchemy

./: .gitignore  README.md  mypy.ini  pyproject.toml
celery_sqlalchemy/: __init__.py  celery.py  errors.py  json.py  json_postgresql.py  kombu.py  model.py  model_postgresql.py  schema.py  types.py
celery_sqlalchemy/json/: __init__.py  postgresql.py  sqlalchemy.py
celery_sqlalchemy/model/: __init__.py  postgresql.py  postgresql_1_4.py  postgresql_2_0.py  sqlalchemy.py  sqlalchemy_1_4.py  sqlalchemy_2_0.py
tests/: test__init__.py  test_celery.py  test_json.py  test_json_postgresql.py  test_model.py  test_model_postgresql.py  test_schema.py
tests/json/: test__init__.py  test_postgresql.py  test_sqlalchemy.py
tests/model/: test__init__.py  test_postgresql.py  test_postgresql_1_4.py  test_postgresql_2_0.py  test_sqlalchemy.py  test_sqlalchemy_1_4.py  test_sqlalchemy_2_0.py
