[tool.poetry]
name = "celery-sqlalchemy"
version = "0.1.3"
description = "SQLAlchemy model serialization for celery."
license = "BSD-3-Clause"
authors = ["Sean Kerr <sean@code-box.org>"]
readme = "README.md"
repository = "https://github.com/seankerr/py-celery-sqlalchemy"
keywords = ["celery", "sqlalchemy", "serialization"]
packages = [{include = "celery_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.9"

orjson = ">=3.9.4"
sqlalchemy = ">=1.4"

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
